tests/compile_fail/label_with_args.rs
#[skuld::label(foo = "bar")]
const BAD: skuld::Label;

fn main() {}
