tests/compile_fail/label_with_args.stderr
error: unexpected token
 --> tests/compile_fail/label_with_args.rs:1:16
  |
1 | #[skuld::label(foo = "bar")]
  |                ^^^
